<resources>
    <string name="app_name">TP2IHM</string>
    <string name="enter_pokemon_name">Enter pokemon name:</string>
    <string name="search">Search</string>
    <string name="exit">Exit</string>
    <string name="name">Name</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="type">Type</string>
    <string name="stats">Stats</string>
    <string name="see_in_browser">See in browser</string>
    <string name="error_no_dom_entity">Error, no Dom Entity</string>
    <string name="end_request">Request finished</string>
    <string name="save_historic">Save historic</string>
</resources>